--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run"
 	},
+	"dependencies": {
+		"monaco-editor": "^0.52.2",
+		"prettier": "^3.5.1",
+		"typescript": "^5.7.3"
+	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
@@ -24,18 +29,23 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"bits-ui": "^1.1.0",
+		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
 		"jsdom": "^25.0.1",
-		"prettier": "^3.4.2",
+		"lucide-svelte": "^0.475.0",
+		"paneforge": "1.0.0-next.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^3.0.1",
+		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
 		"vitest": "^3.0.0"
